--- a/main.html
+++ b/main.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pinterest Hero Section</title>
+  <style>
+    /* Hero container styling */
+    .hero {
+      display: flex;
+      justify-content: space-between; /* Space between image and text content */
+      align-items: center; /* Align items vertically */
+      padding: 20px; /* Padding around the content */
+      background-color: #f5f5f5; /* Light gray background */
+      height: 400px; /* Fixed height for the hero section */
+      border: 2px solid #ddd; /* Optional border for structure */
+    }
+
+    /* Image styling */
+    .hero img {
+      width: 50%; /* Image takes up half of the hero section */
+      height: 100%; /* Matches the height of the hero section */
+      object-fit: cover; /* Ensures the image scales and clips properly */
+      border-radius: 10px; /* Rounded corners for the image */
+    }
+
+    /* Text content styling */
+    .hero-content {
+      max-width: 40%; /* Restrict text content width */
+    }
+
+    .hero-content h1 {
+      font-size: 36px; /* Large heading */
+      margin-bottom: 10px; /* Spacing below the heading */
+      color: #333; /* Dark text color */
+    }
+
+    .hero-content p {
+      font-size: 18px; /* Medium-sized text */
+      margin-bottom: 20px; /* Spacing below the paragraph */
+      color: #555; /* Slightly lighter text color */
+    }
+
+    /* Button styling */
+    .hero-content a {
+      padding: 10px 20px; /* Padding for the button */
+      background-color: #e60023; /* Pinterest-like red background */
+      color: white; /* White text color */
+      text-decoration: none; /* Remove underline */
+      border-radius: 5px; /* Rounded corners */
+      font-size: 16px; /* Font size */
+    }
+
+    /* Hover effect for button */
+    .hero-content a:hover {
+      background-color: #d00020; /* Darker red on hover */
+      transition: background-color 0.3s; /* Smooth transition */
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="hero">
+    <!-- Image Section -->
+    <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
 
+    <!-- Text Content Section -->
+    <div class="hero-content">
+      <h1>Welcome to Pinterest</h1>
+      <p>Discover new ideas, explore trending topics, and get inspired with endless possibilities.</p>
+      <a href="#">Explore Now</a>
+    </div>
+  </div>
 </body>
-
 </html>
